style(ui): fix template text and add margin-top spacing adjustment

--- a/src/app/components/notfound/notfound.scss
+++ b/src/app/components/notfound/notfound.scss
@@ -101,6 +101,10 @@
     line-height: v.$f-line-height-relaxed;
 }
 
+.notfound__button {
+    margin-top: calculateRem(16px);
+}
+
 /* RESPONSIVE */
 
 @include respond(tablet) {
